<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="@drawable/bg"
                  android:orientation="vertical"
                  app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="@dimen/_20sdp"
                      android:orientation="horizontal">

            <ImageButton android:layout_width="@dimen/_40sdp"
                         android:src="@drawable/ic_action_back"
android:id="@+id/btn_back"
                         android:background="?attr/selectableItemBackground"
                         android:layout_height="match_parent"/>
            <ImageView
                    android:layout_width="0dp"

                    android:layout_weight="1.0"
                    android:layout_height="@dimen/_40sdp"
                    android:src="@drawable/splash_logo"/>
            <ImageButton android:layout_width="@dimen/_40sdp"


                         android:background="#00000000"
                         android:layout_height="match_parent"/>

        </LinearLayout>
        <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"

                android:orientation="vertical">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:orientation="vertical">

                <TextView android:layout_width="match_parent"
                          android:text="Reset Password"
                          android:textAllCaps="true"
                          android:layout_marginBottom="@dimen/_20sdp"
                          android:textSize="@dimen/_20sdp"
                          android:textColor="#ffffff"
                          android:layout_height="wrap_content"/>


                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/old_pass"
                        android:textAllCaps="true"
                        android:textSize="@dimen/edit_text_header_size"
                        android:textColor="@color/edit_text_header_text_color"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <EditText
                            android:id="@+id/et_old_password"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_weight="1.0"

                            android:background="#00000000"
                            android:hint="@string/type_your_old_password"
                            android:inputType="textPassword"
                            android:textColor="@color/edit_text_text_color"
                            android:tag="@string/email"
                            android:textSize="@dimen/edit_text_size"
                            android:textColorHint="@color/edit_text_placeholder_text_color"/>

                </LinearLayout>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:background="@color/edit_text_divider_color"></View>




                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/new_password"
                        android:textAllCaps="true"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:textSize="@dimen/edit_text_header_size"
                        android:textColor="@color/edit_text_header_text_color"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <EditText
                            android:id="@+id/et_new_pass"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_weight="1.0"

                            android:background="#00000000"
                            android:hint="@string/type_your_new_password"
                            android:inputType="textPassword"
                            android:textColor="@color/edit_text_text_color"
                            android:tag="@string/email"
                            android:textSize="@dimen/edit_text_size"
                            android:textColorHint="@color/edit_text_placeholder_text_color"/>

                </LinearLayout>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:background="@color/edit_text_divider_color"></View>



                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/confirm_password"
                        android:textAllCaps="true"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:textSize="@dimen/edit_text_header_size"
                        android:textColor="@color/edit_text_header_text_color"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <EditText
                            android:id="@+id/et_confirm_password"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_weight="1.0"

                            android:background="#00000000"
                            android:hint="@string/type_your_confirm_password"
                            android:inputType="textPassword"
                            android:textColor="@color/edit_text_text_color"
                            android:tag="@string/email"
                            android:textSize="@dimen/edit_text_size"
                            android:textColorHint="@color/edit_text_placeholder_text_color"/>

                </LinearLayout>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:background="@color/edit_text_divider_color"></View>


            </LinearLayout>
            <Button
                    android:id="@+id/btn_reset_password"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@drawable/login_btn_bg"
                    android:text="@string/reset_password"
                    android:textSize="@dimen/btn_text_size"
                    android:textColor="@color/btn_text_color"/>
        </LinearLayout>
    </LinearLayout>
</layout>
