<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">
<data>
    <variable name="model" type="com.ibrahim.basicboilerplate.viewmodel.SignupViewModel"></variable>
</data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="@drawable/bg"
                  android:orientation="vertical"
                  app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="@dimen/_20sdp"
                      android:orientation="horizontal">

            <ImageButton android:layout_width="@dimen/_40sdp"
                         android:src="@drawable/ic_action_back"

                         android:id="@+id/btn_back"
                         android:background="?attr/selectableItemBackground"
                         android:layout_height="match_parent"/>
            <ImageView
                    android:layout_width="0dp"

                    android:layout_weight="1.0"
                    android:layout_height="@dimen/_40sdp"
                    android:src="@drawable/splash_logo"/>
            <ImageButton android:layout_width="@dimen/_40sdp"


                         android:background="#00000000"
                         android:layout_height="match_parent"/>

        </LinearLayout>
        <ScrollView android:layout_width="match_parent"
                    android:fillViewport="true"
                    android:layout_height="match_parent">
            <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">
                <TextView android:layout_width="match_parent"
                          android:text="@string/signup"
                          android:textAllCaps="true"
                          android:layout_marginBottom="@dimen/_20sdp"
                          android:textSize="@dimen/_20sdp"
                          android:textColor="#ffffff"
                          android:layout_marginLeft="@dimen/_20sdp"
                          android:layout_marginRight="@dimen/_20sdp"
                          android:layout_height="wrap_content"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:orientation="vertical">


                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/first_name"
                            android:textAllCaps="true"
                            android:textSize="@dimen/edit_text_header_size"
                            android:textColor="@color/edit_text_header_text_color"/>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                        <EditText
                                android:id="@+id/et_first_name"
                                android:layout_width="0dp"
                                android:layout_height="@dimen/_30sdp"
                                android:layout_weight="1.0"
                                android:text="@={model.firstNameLiveData}"
                                android:background="#00000000"
                                android:hint="@string/type_your_first_name"
                                android:inputType="textPersonName"
                                android:textColor="@color/edit_text_text_color"
                                android:tag="@string/first_name"
                                android:textSize="@dimen/edit_text_size"
                                android:textColorHint="@color/edit_text_placeholder_text_color"/>

                    </LinearLayout>

                    <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_1sdp"
                            android:background="@color/edit_text_divider_color"></View>
                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:orientation="vertical">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/last_name"
                            android:textAllCaps="true"
                            android:textSize="@dimen/edit_text_header_size"
                            android:textColor="@color/edit_text_header_text_color"/>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                        <EditText
                                android:id="@+id/et_last_name"
                                android:layout_width="0dp"
                                android:layout_height="@dimen/_30sdp"
                                android:layout_weight="1.0"
                                android:background="#00000000"
                                android:text="@={model.lastNameLiveData}"
                                android:hint="@string/type_your_last_name"
                                android:tag="@string/last_name"
                                android:inputType="textPersonName"
                                android:textSize="@dimen/edit_text_size"
                                android:textColor="@color/edit_text_text_color"
                                android:textColorHint="@color/edit_text_placeholder_text_color"/>

                    </LinearLayout>

                    <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_1sdp"
                            android:background="@color/edit_text_divider_color"></View>
                </LinearLayout>


                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:orientation="vertical">


                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:textAllCaps="true"
                            android:textSize="@dimen/edit_text_header_size"
                            android:textColor="@color/edit_text_header_text_color"/>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                        <EditText
                                android:id="@+id/et_email"
                                android:layout_width="0dp"
                                android:layout_height="@dimen/_30sdp"
                                android:layout_weight="1.0"
                                android:text="@={model.emailLiveData}"
                                android:background="#00000000"
                                android:hint="@string/type_your_email"
                                android:inputType="textEmailAddress"
                                android:textColor="@color/edit_text_text_color"
                                android:tag="@string/email"
                                android:textSize="@dimen/edit_text_size"
                                android:textColorHint="@color/edit_text_placeholder_text_color"/>

                    </LinearLayout>

                    <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_1sdp"
                            android:background="@color/edit_text_divider_color"></View>
                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:orientation="vertical">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/passsword"
                            android:textAllCaps="true"
                            android:textSize="@dimen/edit_text_header_size"
                            android:textColor="@color/edit_text_header_text_color"/>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                        <EditText
                                android:id="@+id/et_password"
                                android:layout_width="0dp"
                                android:layout_height="@dimen/_30sdp"
                                android:layout_weight="1.0"
                                android:background="#00000000"
                                android:hint="@string/type_your_password"
                                android:tag="@string/passsword"
                                android:text="@={model.passwordLiveData}"
                                android:inputType="textPassword"
                                android:textSize="@dimen/edit_text_size"
                                android:textColor="@color/edit_text_text_color"
                                android:textColorHint="@color/edit_text_placeholder_text_color"/>

                    </LinearLayout>

                    <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_1sdp"
                            android:background="@color/edit_text_divider_color"></View>
                </LinearLayout>


                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:orientation="vertical">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/confirm_password"
                            android:textAllCaps="true"
                            android:textSize="@dimen/edit_text_header_size"
                            android:textColor="@color/edit_text_header_text_color"/>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                        <EditText
                                android:id="@+id/et_confirm_password"
                                android:layout_width="0dp"
                                android:layout_height="@dimen/_30sdp"
                                android:layout_weight="1.0"
                                android:background="#00000000"
                                android:text="@={model.confirmPasswordLiveData}"
                                android:hint="@string/type_your_confirm_password"
                                android:tag="@string/confirm_password"
                                android:inputType="textPassword"
                                android:textSize="@dimen/edit_text_size"
                                android:textColor="@color/edit_text_text_color"
                                android:textColorHint="@color/edit_text_placeholder_text_color"/>

                    </LinearLayout>

                    <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_1sdp"
                            android:background="@color/edit_text_divider_color"></View>
                </LinearLayout>

                <CheckBox android:layout_width="match_parent"
                          android:layout_gravity="center"
                          android:textSize="@dimen/_12sdp"
                          android:textColor="@color/btn_text_color"
                          android:layout_marginStart="@dimen/_13sdp"
                          android:text="@string/term_condition"
                          android:paddingStart="@dimen/_5sdp"
                          android:id="@+id/checkbox"
                          android:button="@drawable/cb_style"

                          android:layout_marginTop="@dimen/_10sdp"
                          android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_10sdp"
                          android:paddingLeft="@dimen/_5sdp"/>

                <Button
                        android:id="@+id/btn_signup"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_25sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:background="@drawable/login_btn_bg"
                        android:text="@string/signup"
                        android:textSize="@dimen/btn_text_size"
                        android:textColor="@color/btn_text_color"/>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>
