<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable name="model" type="com.ibrahim.basicboilerplate.viewmodel.LoginViewModel"/>
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="@drawable/bg"
                  android:orientation="vertical"
                  app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:src="@drawable/splash_logo"/>
        <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"

                android:orientation="vertical">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:orientation="vertical">

                <TextView android:layout_width="match_parent"
                          android:text="@string/login"
                          android:textAllCaps="true"
                          android:layout_marginBottom="@dimen/_20sdp"
                          android:textSize="@dimen/_20sdp"
                          android:textColor="#ffffff"
                          android:layout_height="wrap_content"/>


                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textAllCaps="true"
                        android:textSize="@dimen/edit_text_header_size"
                        android:textColor="@color/edit_text_header_text_color"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <EditText
                            android:id="@+id/et_email"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_weight="1.0"

                            android:background="#00000000"
                            android:hint="@string/type_your_email"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/edit_text_text_color"
                            android:tag="@string/email"
                            android:text="@={model.emailLiveData}"
                            android:textSize="@dimen/edit_text_size"
                            android:textColorHint="@color/edit_text_placeholder_text_color"/>

                </LinearLayout>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:background="@color/edit_text_divider_color"></View>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/passsword"
                        android:textAllCaps="true"
                        android:textSize="@dimen/edit_text_header_size"
                        android:textColor="@color/edit_text_header_text_color"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <EditText
                            android:id="@+id/et_password"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_weight="1.0"
                            android:background="#00000000"
                            android:hint="@string/type_your_password"
                            android:tag="@string/passsword"
                            android:inputType="textPassword"
                            android:textSize="@dimen/edit_text_size"
                            android:text="@={model.passwordLiveData}"
                            android:textColor="@color/edit_text_text_color"
                            android:textColorHint="@color/edit_text_placeholder_text_color"/>

                </LinearLayout>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:background="@color/edit_text_divider_color"></View>
            </LinearLayout>
            <Button
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@drawable/login_btn_bg"
                    android:text="@string/login"
                    android:textSize="@dimen/btn_text_size"
                    android:textColor="@color/btn_text_color"/>

        </LinearLayout>
        <RelativeLayout android:orientation="vertical"
                        android:background="@drawable/white_shape"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_100sdp">
            <Button android:layout_width="wrap_content"
                    android:text="@string/forgot_password"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:layout_alignParentStart="true"
                    android:textSize="@dimen/_15sdp"
                    android:background="?attr/selectableItemBackground"
                    android:padding="@dimen/_10sdp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_forgot_password"
                    android:layout_alignParentLeft="true"/>

            <ImageButton android:layout_width="@dimen/_35sdp"

                         android:background="?attr/selectableItemBackground"
                         android:layout_height="@dimen/_35sdp"
                         android:scaleType="fitCenter"
                         android:id="@+id/btn_signup"
                         android:layout_marginRight="@dimen/_10sdp"
                         android:layout_marginTop="@dimen/_44sdp"
                         android:layout_alignParentRight="true"

                         android:src="@drawable/pluse" android:layout_alignParentEnd="true"
                         android:layout_marginEnd="@dimen/_10sdp"/>
        </RelativeLayout>


    </LinearLayout>
</layout>
